Failing bucket compression causes errors returned incorrectly for time-series inserts

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0, 6.0.7, 7.0.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v7.0, v6.3, v6.0
    • Execution Team 2023-05-29
    • 108
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the write of the insert succeeds and the write of the compression fails for a time-series measurement, the insert will return the error which implies the insert fails, even though the measurement was actually inserted. This is problematic and can cause the inserts to be duplicated when a retry happens on an error.

      This can happen for both ordered: true and ordered: false inserts.

            Assignee:
            Henrik Edin
            Reporter:
            Yuhong Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: