SERVER-77063 Make bucket compression operation transparent to users

Suppress any error encountered during bucket compression, this fixes bugs where errors were reported due to shard version changes that got interpreted by mongos as user operations need to be retried, causing inserts to happen multiple times.

(cherry picked from commit 770b5552578d1cebba2df38c48274197f76a3c34)